--- a/src/css/generation-style.css
+++ b/src/css/generation-style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700;900&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -9,53 +12,102 @@
 body{
     width: 100%;
     height: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    background-color: #231D23;
 }
 
 
+.generation-title{
+    font-family: "Lato";
+    font-weight: 900;
+    font-size: 50px;
+
+    margin-top: 50px;
+
+    align-self: center;
+
+    color: white;
+}
+
 
 .pokedex{
-    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .pokedex-container{
     width: 100%;
     height: 100%;
+    
+    margin-top: 100px;
 
-    margin: 50px;
-
-    display: flex;
-    justify-content: center;
-
-    overflow-y:auto;
-    flex-wrap: wrap;
-
-    background-color: blue;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    padding-inline-start: 0;
 }
 
 .pokemon-card{
-    width: 200px;
+    width: 300px;
     height: 400px;
 
+    list-style: none;
+
     margin: 20px;
+
+    position: relative;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    border: none;
+    border-radius: 30px;
 
     background-color: #E74C3C;
 }
 .pokemon-card-image{
-    width: 200px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
 
-    display: inline-table;
-
-    border-radius: 20px;
-
-    filter: grayscale(1);
+    position: absolute;
+    z-index: 1;
 
     transition: 0.3s ease;
 }
-.pokemon-card-title{
+.pokemon-card-background{
+    width: 250px;
+    height: 250px;
 
+    position: absolute;
+    top: 20px;
+
+    opacity: 0.3;
+}
+
+.pokemon-card-title{
+    font-family: "Lato";
+    font-weight: 900;
+    font-size: 40px;
+
+    margin-top: 10px;
+
+    position: absolute;
+    bottom: 50px;
+
+    color: white;
 }
 .pokemon-card-subtitle{
+    font-family: "Lato";
+    font-weight: 700;
+    font-size: 20px;
 
+    position: absolute;
+    bottom: 20px;
+
+    color: yellow;
 }
 
