--- a/style.css
+++ b/style.css
@@ -4,47 +4,268 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
+
+
+/* HEADER SECTION */
 
 header{
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
+
+    background-color: #292929;
 }
 
-.menuBar{
+.header-menu{
     width: 100%;
     height: 100px;
-
-    background-color: rgb(41, 41, 41, 0.5);
-
-    position: fixed;
-    z-index: 1;
 }
-.pokedexLogo{
+.pokedex-logo{
     width: 80px;
     height: 80px;
 
-    margin-top: 10px;
-    margin-left: 20px;
-    margin-bottom: 10px;
+    margin-top: 50px;
+    margin-left: 50px;
     float: left;
 }
-.sideNavButton{
+.side-nav-button{
+    width: 70px;
+    height: 70px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     font-size: 24px;
+    text-decoration: none;
 
     border: none;
-    color: white;
+    border-radius: 15px;
 
-    margin-top: 25px;
-    margin-right: 30px;
-    margin-bottom: 10px;
+    margin-top: 50px;
+    margin-right: 50px;
     float: right;
+
+    transition: 0.3s;
+
+    color: white;
+    background-color: #E85377;
+}
+.side-nav-button:hover{
+    transition: 0.3s;
+
+    background-color: #ba3d5a;
+}
+
+.header-content{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.header-contacts{
+    width: 185px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.header-contacts a{
+    font-size: 2em;
+
+    margin: 50px;
+
+    text-decoration: none;
+    color: white;
+}
+
+.header-text{
+    width: 70%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    margin-left: 50px;
+    padding: 20;
+
+    color: white;
+}
+.header-text h1{
+    font-family: "century Gothic";
+    font-weight: 700;
+    font-size: 70px;
+
+    text-align: left;
+}
+.header-text label{
+    font-family: "century Gothic";
+    font-weight: 400;
+    font-size: 20px;
+
+    margin-top: 20px;
+
+    text-align: left;
+}
+
+.header-text-button {
+    width: 150px;
+    height: 60px;
+
+    margin-top: 20px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: none;
+    border-radius: 5px;
+
+    text-align: center;
+    font-family: "century Gothic";
+    font-weight: 700;
+    font-size: 18px;
+    text-decoration: none;
+
+    color: white;
+    background-color: #E85377;
+
+    transition: 0.3s;
+}
+.header-text-button:hover{
+    transition: 0.3s;
+
+    background-color: #ba3d5a;
+}
+.header-text-owner-logo {
+    width: 100px;
+    height: 100px;
+
+    margin-top: 70px;
+}
+
+.header-image{
+    width: 100%;
+
+    display: flex;
+    align-self: center;
+    justify-content: center;
+}
+.header-image img{
+    width: 700px;
+    height: 700px;
 }
 
 
 
+/* ABOUT SECTION */
+
+.about-section{
+    width: 100%;
+    height: auto;
+
+    background-color: #292929;
+}
+.about-section .about-row .about-content{
+    width: 50%;
+}
+
+.about-row{
+    display: flex;
+}
+.arceus{
+    width: 50%;
+    height: 700px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
+}
+.arceus img{
+    width: 1200px;
+    height: 700px;
+}
+.about-content{
+    width: 10px;
+    align-self: center;
+
+    color: white;
+}
+.about-content h3{
+    font-family: "century Gothic";
+    font-weight: 700;
+    font-size: 20px;
+}
+.about-content h1{
+    font-family: "century Gothic";
+    font-weight: 700;
+    font-size: 70px;
+}
+.about-content p{
+    font-family: "century Gothic";
+    font-weight: 400;
+    font-size: 15px;
+}
+
+
+
+/* TECHNOLOGIES SECTION */
+
+.tech-section{
+    width: 100%;
+    height: 700px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    background-color: #292929;
+}
+.tech-content{
+    width: 50%;
+    align-self: center;
+
+    color: white;
+}
+.tech-content h3{
+    font-family: "century Gothic";
+    font-weight: 700;
+    font-size: 20px;
+}
+.tech-content h1{
+    font-family: "century Gothic";
+    font-weight: 700;
+    font-size: 70px;
+}
+.tech-content p{
+    font-family: "century Gothic";
+    font-weight: 400;
+    font-size: 15px;
+}
+.tech-technologies{
+    margin-top: 20px;
+
+    font-size: 30px;
+
+    color: white;
+}
+.tech-technologies i{
+    margin: 20px;
+}
+
+
+
+/* SIDE NAV SECTION */
 
 .side-nav{
     width: 0px;
@@ -54,6 +275,7 @@ header{
 
     display: flex;
     flex-direction: column left;
+    overflow-y: auto;
 
     position: fixed;
     z-index: 2;
@@ -63,77 +285,146 @@ header{
     background-color: #292929;
 }
 
-.side-nav-exit{
+.side-nav-header{
+    width: 300px;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.header-exit{
     width: 100px;
     height: 100px;
 
     font-size: 5vw;
+    text-decoration: none;
 
-    margin-top: 50px;
-    margin-left: 50px;
+    position: absolute;
+    top: 50;
 
-    color: white;
-}
-/*.close-side-nav-object{
-    color: white;
-}
-.close-side-nav-object:hover{
-    color: aqua;
-}*/
-
-.side-nav-title{
-    align-self: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     color: white;
 }
-.side-nav-title h1{
-    font-family: "Lato";
-    font-weight: 900;
+.header-title{
+    display: flex;
+    flex-direction: column;
+
+    color: white;
+}
+.header-title h1{
+    font-family: "century Gothic";
+    font-weight: 700;
     font-size: 50px;
 
-    margin-top: 0;
+    text-align: center;
+    transform: rotate(-90deg);
 }
 
-.generation-container{
+.generation-buttons-container{
     width: 100%;
     height: 100%;
 
-    margin-top: 40px;
+    padding: 100;
 
-    justify-content: center;
-
-    overflow-y:auto;
+    display: flex;
+    align-items: center;
     flex-wrap: wrap;
+    gap: 50px;
 }
-.generation-container img{
-    width: 200px;
-    height: 400px;
+.generation-buttons{
+    width: 350px;
+    height: 220px;
 
-    display: inline-table;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
+    border: none;
     border-radius: 20px;
 
-    filter: grayscale(1);
+    text-decoration: none;
+
+    position: relative;
+    margin: 0 auto;
+    padding-left: 15;
+
+    transition: 0.3s;
+
+    background-color: #141A1F;
+}
+.generation-buttons:hover{
+    transition: 0.3s;
+
+    background-color: #ff4757;
+}
+.generation-buttons h1{
+    font-family: "century Gothic";
+    font-weight: 700;
+    font-size: 150px;
+
+    text-decoration: none;
+
+    color: white;
+}
+.generation-buttons img{
+    width: 300px;
+    height: 300px;
+
+    position: absolute;
+    z-index: 1;
+    top: -100;
+    right: -100;
+
+    border-radius: 20px;
 
     transition: 0.3s ease;
 }
-.generation-container div{
-    width: 200px;
-    height: 400px;
-
-    overflow: hidden;
-    display: inline-table;
-
-    margin: 40px;
-    border-radius: 20px;
-}
-.generation-container img:hover{
+/*.generation-container img:hover{
     transform: scale(1.1);
     filter: grayscale(0);
     transition: 0.3s ease;
+}*/
+
+
+
+/* SOCIAL MEDIA BUTTONS */
+
+.fa-youtube{
+    transition: 0.3s;
+}
+.fa-linkedin{
+    transition: 0.3s;
+}
+.fa-github{
+    transition: 0.3s;
+}
+.fa-youtube:hover{
+    color: #ff4757;
+    transition: 0.3s;
+}
+.fa-linkedin:hover{
+    color: #1e90ff;
+    transition: 0.3s;
+}
+.fa-github:hover{
+    color: #2f3542;
+    transition: 0.3s;
 }
 
-@media only screen and (max-width: 1040px) {
+
+
+/* RESPONSIVITY */
+
+@media only screen and (max-width:1040px) {
+    .about-row{
+        flex-direction: column;
+    }
+
     .side-nav{
         flex-direction: column;
     }
@@ -146,253 +437,5 @@ header{
         display: flex;
         align-items: center;
         justify-content: center;
-    }
-}
-
-
-
-.main-text{
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-    align-self: center;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-
-    color: white;
-    background-color: rgb(0, 0, 0, 0.5);
-    backdrop-filter: blur(5px);
-}
-.main-text h1{
-    font-family: "Lato";
-    font-weight: 900;
-    font-size: 10vw;
-}
-
-.mainImages{
-    width: 100%;
-    height: 100%;
-    background-color: #f2f2f2;
-    background-image: url('imgs/backgrounds/main-screen/rayquaza.jpg');
-    background-size: cover;
-    background-position: bottom center;
-    background-repeat: no-repeat;
-    position: relative;
-
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-}
-
-
-.continueOrChangeImage{
-    height: 100px;
-
-    color: #f2f2f2;
-
-    align-self: center;
-    justify-content: center;
-
-    margin: 0;
-    bottom: 100px;
-    left: 50%;
-    right: 50%;
-    -ms-transform: translate(-50%);
-    transform: translate(-50%);
-
-    display: flex;
-    position: absolute;
-}
-.continueArrow{
-    position: absolute;
-    margin: 0;
-    /*top: 100%;
-    left: 50%;
-    -ms-transform: translate(-50%);
-    transform: translate(-50%);*/
-}
-
-.changeMainImage{
-    list-style-type: none;
-
-    display: inline-flex;
-
-    position: absolute;
-    margin: 0;
-    top: 100%;
-    /*left: 50%;
-    -ms-transform: translate(-50%);
-    transform: translate(-50%);*/
-}
-.changeMainImage li{
-    display: inline-block;
-
-    padding: 8px;
-
-    align-items: center;
-    align-self: center;
-    align-content: center;
-}
-
-
-
-
-.aboutSection{
-    width: 100%;
-    height: auto;
-
-    background-color: #292929;
-}
-/*.aboutSection .row{
-    background-image: url("imgs/backgrounds/Arceus.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-.gro{
-    width: 100%;
-}*/
-.arceus{
-    width: 60%;
-    height: 700px;
-
-    clip-path: polygon(0 0, 100% 0%, 95% 100%, 0 100%);
-
-    background-image: url("imgs/backgrounds/main-page/Arceus.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-/*.image-col{
-    width: 100%;
-}*/
-
-.aboutSection .row .col{
-    width: 50%;
-}
-.technologiesSection .row .col{
-    width: 50%;
-}
-
-
-.row{
-    display: flex;
-}
-.content-col{
-    width: 10px;
-    align-self: center;
-}
-h1{
-    font-family: "Lato";
-    font-weight: 900;
-    
-    margin-top: 50px;
-    font-size: 5vw;
-    color: white;
-    text-align: center;
-}
-p{
-    font-family: "Lato";
-    font-weight: 700;
-
-    color: white;
-    font-size: 1vw;
-    margin: 50px;
-    text-align: left;
-}
-
-
-
-.technologiesSection{
-    width: 100%;
-    height: auto;
-
-    background-color: #292929;
-}
-
-.charizard{
-    width: 60%;
-    height: 700px;
-
-    /*transform:skew((5deg, 0), 0deg);*/
-    clip-path: polygon(0 0, 100% 0%, 100% 100%, 5% 100%);
-
-    background-image: url("imgs/backgrounds/main-page/charizard.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-
-
-
-.contact-container{
-    width: 100%;
-    height: 200px;
-
-    display: flex;
-    flex-direction: column;
-
-    background-color: #292929;
-}
-
-.contact-title{
-    font-family: "Lato";
-    font-weight: 900;
-    font-size: 50px;
-
-    align-self: center;
-
-    margin-top: 30px;
-}
-
-.contact-content{
-    width: 100%;
-    height: 100px;
-
-    margin-top: 10px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    align-content: center;
-
-    color: #f2f2f2;
-}
-.contact-content a{
-    font-size: 30px;
-
-    padding: 20px;
-}
-
-.fa-youtube{
-    transition: 0.3s;
-}
-.fa-linkedin{
-    transition: 0.3s;
-}
-.fa-github{
-    transition: 0.3s;
-}
-
-.fa-youtube:hover{
-    color: red;
-    transition: 0.3s;
-}
-.fa-linkedin:hover{
-    color: blue;
-    transition: 0.3s;
-}
-.fa-github:hover{
-    color: black;
-    transition: 0.3s;
-}
-
-
-@media only screen and (max-width:1040px) {
-    .row{
-        flex-direction: column;
     }
 }
