--- a/src/css/generation-style.css
+++ b/src/css/generation-style.css
@@ -9,12 +9,12 @@
 
 
 
-body{
+body {
     width: 100%;
     height: 100%;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 
     background-color: #231D23;
 }
@@ -41,7 +41,7 @@ body{
 
 
 
-.generation-title{
+.generation-title {
     font-family: "century Gothic";
     font-weight: 700;
     font-size: 40px;
@@ -65,15 +65,17 @@ body{
     flex-direction: row;
     align-items: center;
 
-    
+
     border: none;
     border-radius: 5px;
 
     background-color: #292929;
 }
+
 .fa-magnifying-glass {
     color: #6E6B6F;
 }
+
 .search-bar-input {
     width: 100%;
 
@@ -84,6 +86,7 @@ body{
     color: white;
     background: none;
 }
+
 .search-bar-input:focus {
     outline: none;
     background: none;
@@ -92,23 +95,25 @@ body{
 .side-menu-container::-webkit-scrollbar {
     width: 7px;
 }
+
 .side-menu-container::-webkit-scrollbar-thumb {
-    background: #6E6B6F; 
+    background: #6E6B6F;
     border-radius: 10px;
 }
+
 .side-menu-container::-webkit-scrollbar-thumb:hover {
-    background: #7f7d80; 
+    background: #7f7d80;
 }
 
 
-.pokedex{
+.pokedex {
     width: 100%;
     height: 100%;
 
     position: relative;
 }
 
-.pokedex-container{
+.pokedex-container {
     margin-top: 50px;
 
     display: flow-root;
@@ -116,19 +121,36 @@ body{
     list-style: none;
 }
 
-.pokemon-card{
+.pokemon-card {
     width: 100%;
     height: 150px;
 
-    list-style: none;
+    background-color: #141A1F;
+}
+
+.card-button {
+    width: 100%;
+    height: 100%;
 
     display: flex;
     flex-direction: row;
     align-items: center;
 
+    text-align: left;
+
+    border: none;
+
+    transition: 0.3s;
+
     background-color: #141A1F;
 }
-.card-image{
+
+.card-button:hover {
+    transition: 0.3s;
+    background-color: #7f7d80;
+}
+
+.card-image {
     width: 70px;
     height: 70px;
 
@@ -139,7 +161,7 @@ body{
     margin-left: 20px;
 }
 
-.card-id{
+.card-id {
     font-family: "Poppins";
     font-weight: 400;
     font-size: 15px;
@@ -148,7 +170,8 @@ body{
 
     color: #E9E9E9;
 }
-.card-name{
+
+.card-name {
     font-family: "Raleway";
     font-weight: 900;
     font-size: 20px;
@@ -162,7 +185,8 @@ body{
     display: flex;
     flex-direction: row;
 }
-.type-icon{
+
+.type-icon {
     width: 25px;
     height: 25px;
 
@@ -175,13 +199,13 @@ body{
 
     border-radius: 50px;
 }
+
 .type-image {
     width: 15px;
     height: 15px;
 }
 
-.pokemon-card-divider{
+.pokemon-card-divider {
     border: 0;
     border-top: 5px solid #231D23;
 }
-
