--- a/src/css/generation-style.css
+++ b/src/css/generation-style.css
@@ -7,8 +7,6 @@
     box-sizing: border-box;
 }
 
-
-
 body {
     width: 100%;
     height: 100%;
@@ -21,9 +19,9 @@ body {
 
 
 
+/* SIDE MENU */
 
-
-
+/* TOP CONTENT */
 .side-menu-container {
     width: 400px;
     height: 100%;
@@ -38,9 +36,6 @@ body {
     background-color: #141A1F;
 }
 
-
-
-
 .generation-title {
     font-family: "century Gothic";
     font-weight: 700;
@@ -52,7 +47,6 @@ body {
 
     color: white;
 }
-
 
 .search-bar {
     width: 80%;
@@ -106,6 +100,8 @@ body {
 }
 
 
+
+/* BODY CONTENT */
 .pokedex {
     width: 100%;
     height: 100%;
