--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
 
 * {
     margin: 0;
@@ -10,15 +10,14 @@
 
 
 /* HEADER SECTION */
-
-header {
+/* header {
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
 
     background-color: #292929;
-}
+} */
 
 .header-menu {
     width: 100%;
@@ -104,15 +103,15 @@ header {
 }
 
 .header-text h1 {
-    font-family: "century Gothic";
-    font-weight: 700;
+    font-family: "Lato";
+    font-weight: 900;
     font-size: 70px;
 
     text-align: left;
 }
 
 .header-text label {
-    font-family: "century Gothic";
+    font-family: "Lato";
     font-weight: 400;
     font-size: 20px;
 
@@ -135,7 +134,7 @@ header {
     border-radius: 5px;
 
     text-align: center;
-    font-family: "century Gothic";
+    font-family: "Lato";
     font-weight: 700;
     font-size: 18px;
     text-decoration: none;
@@ -175,7 +174,6 @@ header {
 
 
 /* ABOUT SECTION */
-
 .about-section {
     width: 100%;
     height: auto;
@@ -215,27 +213,34 @@ header {
 }
 
 .about-content h3 {
-    font-family: "century Gothic";
+    font-family: "Lato";
     font-weight: 700;
     font-size: 20px;
 }
 
 .about-content h1 {
-    font-family: "century Gothic";
+    font-family: "Lato";
     font-weight: 700;
     font-size: 70px;
 }
 
 .about-content p {
-    font-family: "century Gothic";
+    font-family: "Lato";
     font-weight: 400;
     font-size: 15px;
+}
+
+.about-content li {
+    font-family: "Lato";
+    font-weight: 400;
+    font-size: 15px;
+
+    margin-left: 30;
 }
 
 
 
 /* TECHNOLOGIES SECTION */
-
 .tech-section {
     width: 100%;
     height: 700px;
@@ -256,19 +261,19 @@ header {
 }
 
 .tech-content h3 {
-    font-family: "century Gothic";
+    font-family: "Lato";
     font-weight: 700;
     font-size: 20px;
 }
 
 .tech-content h1 {
-    font-family: "century Gothic";
+    font-family: "Lato";
     font-weight: 700;
     font-size: 70px;
 }
 
 .tech-content p {
-    font-family: "century Gothic";
+    font-family: "Lato";
     font-weight: 400;
     font-size: 15px;
 }
@@ -288,7 +293,6 @@ header {
 
 
 /* SIDE NAV SECTION */
-
 .side-nav {
     width: 0px;
     height: 100%;
@@ -342,8 +346,8 @@ header {
 }
 
 .header-title h1 {
-    font-family: "century Gothic";
-    font-weight: 700;
+    font-family: "Lato";
+    font-weight: 900;
     font-size: 50px;
 
     text-align: center;
@@ -391,7 +395,7 @@ header {
 }
 
 .generation-buttons h1 {
-    font-family: "century Gothic";
+    font-family: "Lato";
     font-weight: 700;
     font-size: 150px;
 
@@ -414,16 +418,9 @@ header {
     transition: 0.3s ease;
 }
 
-/*.generation-container img:hover{
-    transform: scale(1.1);
-    filter: grayscale(0);
-    transition: 0.3s ease;
-}*/
-
 
 
 /* SOCIAL MEDIA BUTTONS */
-
 .fa-youtube {
     transition: 0.3s;
 }
@@ -454,7 +451,6 @@ header {
 
 
 /* RESPONSIVITY */
-
 @media only screen and (max-width:1040px) {
     .about-row {
         flex-direction: column;
