- organization of main screen html and css

--- a/style.css
+++ b/style.css
@@ -7,352 +7,7 @@
     scroll-behavior: smooth;
 }
 
-
-
-/* HEADER SECTION */
-/* header {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-
-    background-color: #292929;
-} */
-
-.header-menu {
-    width: 100%;
-    height: 100px;
-}
-
-.pokedex-logo {
-    width: 80px;
-    height: 80px;
-
-    margin-top: 50px;
-    margin-left: 50px;
-    float: left;
-}
-
-.side-nav-button {
-    width: 70px;
-    height: 70px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    font-size: 24px;
-    text-decoration: none;
-
-    border: none;
-    border-radius: 15px;
-
-    margin-top: 50px;
-    margin-right: 50px;
-    float: right;
-
-    transition: 0.3s;
-
-    color: white;
-    background-color: #E85377;
-}
-
-.side-nav-button:hover {
-    transition: 0.3s;
-
-    background-color: #ba3d5a;
-}
-
-.header-content {
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-    flex-direction: row;
-}
-
-.header-contacts {
-    width: 185px;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.header-contacts a {
-    font-size: 2em;
-
-    margin: 50px;
-
-    text-decoration: none;
-    color: white;
-}
-
-.header-text {
-    width: 70%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    margin-left: 50px;
-    padding: 20;
-
-    color: white;
-}
-
-.header-text h1 {
-    font-family: "Lato";
-    font-weight: 900;
-    font-size: 70px;
-
-    text-align: left;
-}
-
-.header-text label {
-    font-family: "Lato";
-    font-weight: 400;
-    font-size: 20px;
-
-    margin-top: 20px;
-
-    text-align: left;
-}
-
-.header-text-button {
-    width: 150px;
-    height: 60px;
-
-    margin-top: 20px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    border: none;
-    border-radius: 5px;
-
-    text-align: center;
-    font-family: "Lato";
-    font-weight: 700;
-    font-size: 18px;
-    text-decoration: none;
-
-    color: white;
-    background-color: #E85377;
-
-    transition: 0.3s;
-}
-
-.header-text-button:hover {
-    transition: 0.3s;
-
-    background-color: #ba3d5a;
-}
-
-.header-text-owner-logo {
-    width: 100px;
-    height: 100px;
-
-    margin-top: 70px;
-}
-
-.header-image {
-    width: 100%;
-
-    display: flex;
-    align-self: center;
-    justify-content: center;
-}
-
-.header-image img {
-    width: 700px;
-    height: 700px;
-}
-
-
-
-/* ABOUT SECTION */
-.about-section {
-    width: 100%;
-    height: auto;
-
-    background-color: #292929;
-}
-
-.about-section .about-row .about-content {
-    width: 50%;
-}
-
-.about-row {
-    display: flex;
-}
-
-.arceus {
-    width: 50%;
-    height: 700px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    position: relative;
-}
-
-.arceus img {
-    width: 1200px;
-    height: 700px;
-}
-
-.about-content {
-    width: 10px;
-    align-self: center;
-
-    color: white;
-}
-
-.about-content h3 {
-    font-family: "Lato";
-    font-weight: 700;
-    font-size: 20px;
-}
-
-.about-content h1 {
-    font-family: "Lato";
-    font-weight: 700;
-    font-size: 70px;
-}
-
-.about-content p {
-    font-family: "Lato";
-    font-weight: 400;
-    font-size: 15px;
-}
-
-.about-content li {
-    font-family: "Lato";
-    font-weight: 400;
-    font-size: 15px;
-
-    margin-left: 30;
-}
-
-
-
-/* TECHNOLOGIES SECTION */
-.tech-section {
-    width: 100%;
-    height: 700px;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    background-color: #292929;
-}
-
-.tech-content {
-    width: 50%;
-    align-self: center;
-
-    color: white;
-}
-
-.tech-content h3 {
-    font-family: "Lato";
-    font-weight: 700;
-    font-size: 20px;
-}
-
-.tech-content h1 {
-    font-family: "Lato";
-    font-weight: 700;
-    font-size: 70px;
-}
-
-.tech-content p {
-    font-family: "Lato";
-    font-weight: 400;
-    font-size: 15px;
-}
-
-.tech-technologies {
-    margin-top: 20px;
-
-    font-size: 30px;
-
-    color: white;
-}
-
-.tech-technologies i {
-    margin: 20px;
-}
-
-
-
 /* SIDE NAV SECTION */
-.side-nav {
-    width: 0px;
-    height: 100%;
-
-    right: 0;
-
-    display: flex;
-    flex-direction: column left;
-    overflow-y: auto;
-
-    position: fixed;
-    z-index: 2;
-
-    transition: 0.5s;
-
-    background-color: #292929;
-}
-
-.side-nav-header {
-    width: 300px;
-    height: 100%;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.header-exit {
-    width: 100px;
-    height: 100px;
-
-    font-size: 5vw;
-    text-decoration: none;
-
-    position: absolute;
-    top: 50;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    color: white;
-}
-
-.header-title {
-    display: flex;
-    flex-direction: column;
-
-    color: white;
-}
-
-.header-title h1 {
-    font-family: "Lato";
-    font-weight: 900;
-    font-size: 50px;
-
-    text-align: center;
-    transform: rotate(-90deg);
-}
 
 .generation-buttons-container {
     width: 100%;
@@ -451,11 +106,7 @@
 
 
 /* RESPONSIVITY */
-@media only screen and (max-width:1040px) {
-    .about-row {
-        flex-direction: column;
-    }
-
+/* @media only screen and (max-width:1040px) {
     .side-nav {
         flex-direction: column;
     }
@@ -469,4 +120,4 @@
         align-items: center;
         justify-content: center;
     }
-}
+} */
